@@ -16,6 +16,9 @@ sub main {
     require_ok('bin/sshss') or BAIL_OUT();
 
     my $script_basedir = File::Spec->catdir( cwd(), 'bin' );
+
+    # Remove the drive for Windows to make the test pass
+    ( undef, $script_basedir, undef ) = File::Spec->splitpath( $script_basedir, 1 );
     is( App::SSH::SwitchShell::get_abs_script_basedir(), $script_basedir, 'get_abs_script_basedir() returns the correct path' );
 
     #
