@@ -2,6 +2,8 @@ Revision history for App-SSH-SwitchShell
 
 {{$NEXT}}
 
+  - Fix tests under Windows
+
 0.002  2017-09-16 16:21:02 UTC
 
   - Added package App::SSH::SwitchShell from bin/sshss to provides section
